[package]
name = "hyper-routing"
version = "0.5.0"
authors = ["Travis Sharp <furiousscissors@gmail.com>", "Marcin Radoszewski <moriturius@gmail.com>", "Alexander Mescheryakov <freecoder.xx@gmail.com>"]
description = "Simple routing middleware for Hyper http library."
repository = "https://github.com/tsharp/hyper-routing"
keywords = ["hyper", "router", "routing", "middleware"]
documentation = "https://docs.rs/hyper-routing/latest/hyper_routing/"
license = "MIT"
edition = "2018"

[[bin]]
name = "test-server"
path = "test-server/main.rs"

[lib]
name = "hyper_routing"
path = "src/lib.rs"

[dependencies]
futures = "^0.1"
hyper = "^0.12"
regex = "^0.2"
