[package]
name = "hyper-routing"
version = "0.7.0"
authors = ["Travis Sharp <furiousscissors@gmail.com>", "Marcin Radoszewski <moriturius@gmail.com>", "Alexander Mescheryakov <freecoder.xx@gmail.com>"]
description = "Simple routing middleware for Hyper http library."
repository = "https://github.com/tsharp/hyper-routing"
keywords = ["hyper", "router", "routing", "middleware"]
documentation = "https://docs.rs/hyper-routing/latest/hyper_routing/"
license = "MIT"
edition = "2021"

[lib]
name = "hyper_routing"
path = "src/lib.rs"

[dependencies]
hyper = { version = "^1", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
http-body-util = "0.1"
regex = "^1"
