[package]
name = "test-server"
version = "0.1.0"
authors = ["Travis Sharp <furiousscissors@gmail.com>"]
description = "Test server for hyper-routing"
repository = "https://github.com/tsharp/hyper-routing"
keywords = ["hyper", "router", "routing", "middleware"]
documentation = "https://docs.rs/hyper-routing/latest/hyper_routing/"
license = "MIT"
edition = "2021"
publish = false

[[bin]]
name = "test-server"

[dependencies]
hyper-routing = { path = "../hyper-routing" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
pretty_env_logger = "0.4"
